mod: prepared rc to release merge

--- a/plugins/copiino/sketches/blinky/sketch.ini
+++ b/plugins/copiino/sketches/blinky/sketch.ini
@@ -3,7 +3,7 @@ description = "This is the typical demo for showing people how to use the progra
 "
 caption = "Blinky"
 thumbnail = "blinky/default_thumbnail.jpg"
-wiring = "blinky/IMG_0605.JPG"
+wiring = "blinky/IMG_0612_without_wires_1.JPG"
 projectID = "527ff156a43dd1.96740342"
 MD5-Sum = "0"
 sketch = "blinky"
