--- a/plugins/copiino/sketches/547b8e0e82cce7.81397573/sketch.ini
+++ b/plugins/copiino/sketches/547b8e0e82cce7.81397573/sketch.ini
@@ -1,7 +1,9 @@
 [info]
 caption = "RS232 Cmd Demo"
-description = "This is the description field and thus should not be left blank."
+description = "  This program shows how to receive commands from the Raspberry Pi.
+  There is one command that enables or disables the onboard
+  LEDs."
 thumbnail = "547b8e0e82cce7.81397573/default_thumbnail.jpg"
-wiring = "547b8e0e82cce7.81397573/default_wiring.jpg"
+wiring = "547b8e0e82cce7.81397573/IMG_0612_without_wires_1.JPG"
 sketch = "547b8e0e82cce7.81397573"
 [cpp]
